[gd_scene load_steps=9 format=3 uid="uid://dif20onumbk7d"]

[ext_resource type="PackedScene" uid="uid://b0oa62f6hadl0" path="res://scenes/unit/unit.tscn" id="1_nbq3v"]
[ext_resource type="Script" uid="uid://dpgf6otwsy2wo" path="res://scenes/player_well_rounded/scripts/player_well_rounded.gd" id="2_sgh5l"]
[ext_resource type="Resource" uid="uid://ily2pkpehjv4" path="res://resources/units/players/stats_player_well_rounded.tres" id="3_sgh5l"]
[ext_resource type="Script" uid="uid://cssdid3k8dtp4" path="res://scenes/player_well_rounded/scripts/trail.gd" id="4_8pif2"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="5_bj3ey"]

[sub_resource type="Curve" id="Curve_sgh5l"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_ds5ef"]
radius = 7.071068

[sub_resource type="CircleShape2D" id="CircleShape2D_bj3ey"]
radius = 27.073973

[node name="PlayerWellRounded" instance=ExtResource("1_nbq3v")]
collision_mask = 2
script = ExtResource("2_sgh5l")
dash_duration = 0.5
dash_speed_multi = 4
dash_cooldown = 1.5
stats = ExtResource("3_sgh5l")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
modulate = Color(0.827451, 0.827451, 0.827451, 0.23529412)
show_behind_parent = true
top_level = true
position = Vector2(4, -41)
width = 35.0
width_curve = SubResource("Curve_sgh5l")
script = ExtResource("4_8pif2")
player = NodePath("../..")

[node name="Shadow" parent="Visuals" index="1"]
z_index = 1

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("5_bj3ey")

[node name="CollisionShape2D" parent="." index="1"]
z_index = 1
position = Vector2(-1, -28)
shape = SubResource("CircleShape2D_ds5ef")

[node name="DashTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="DashCoolDownTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="TrailTimer" type="Timer" parent="." index="5"]
unique_name_in_owner = true

[node name="HurtBoxComponent" parent="." index="6"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent" index="0"]
z_index = 1
position = Vector2(1, -32)
shape = SubResource("CircleShape2D_bj3ey")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
